# new_ros_base_cdf

./: .gitignore  README.md
cdf_msgs/: CMakeLists.txt  package.xml
cdf_msgs/msg/: RobotData.msg  ServoDebug.msg
lidar_utils/: CMakeLists.txt  README.md  package.xml
lidar_utils/src/: detect_obstacle.cpp
nav_node/: CMakeLists.txt  package.xml
nav_node/src/: nav_node.py
nav_node/src/graphfiles/: joli.gml
robot_state_reciever/: CMakeLists.txt  README.md  package.xml
robot_state_reciever/launch/: robot_state_receiver_launchfile.launch
robot_state_reciever/src/: robot_state_reciever.py
robot_state_reciever/src/config/: msg_format.py  new_msg_format.py
script_match/: CMakeLists.txt  README.md  package.xml
script_match/launch/: script_match.launch  script_match_mecamouth.launch  standalone_launch.launch  test_nav.launch
script_match/src/: match_handler.py
script_match/src/config/: actions_2022.py  symmetries.py
script_match/src/config/scripts/: simulation.py  statuebot.py  statuebot_init_recal.py
sender/: CMakeLists.txt  README.md  package.xml
sender/launch/: sender.launch
sender/src/: sender_node.py
